# admin-fastapi

./: pyproject.toml
app/: main.py
app/auth/: router.py
